--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-VUE_APP_URL=
-VUE_APP_API_URL=http://localhost:8000/api/v1
-VUE_APP_SOURCE=desktop
+VUE_APP_API_URL=https://lvxingshai.app/
+VUE_APP_SOURCE=Dashboard
