--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fullhuman/postcss-purgecss": "^1.3.0",
     "axios": "^0.19.0",
     "core-js": "^3.4.2",
+    "dayjs": "^1.8.17",
     "localforage": "^1.7.3",
     "lodash": "^4.17.15",
     "nprogress": "^0.2.0",
@@ -20,6 +21,7 @@
     "vue": "^2.6.10",
     "vue-noty-with-icon": "github:YangAi/vue-noty-with-icon",
     "vue-router": "^3.0.7",
+    "vuetify": "^2.1.0",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
@@ -35,6 +37,8 @@
     "eslint-plugin-vue": "^5.0.0",
     "sass": "^1.23.7",
     "sass-loader": "^8.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-cli-plugin-vuetify": "^2.0.2",
+    "vue-template-compiler": "^2.6.10",
+    "vuetify-loader": "^1.3.0"
   }
 }
