--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-VUE_APP_API_URL=http://35.227.95.227
-#
+VUE_APP_API_URL=http://localhost:8000/api/v1/
+VUE_APP_AUTH_RESOURCE=sessions
 VUE_APP_SOURCE=Dashboard
-VUE_APP_LANGUAGE=zh
+VUE_APP_LANGUAGE=en
 
