--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
-VUE_APP_URL=
-VUE_APP_API_URL=http://localhost:8000/api/v1
-VUE_APP_SOURCE=desktop
+VUE_APP_API_URL=http://localhost:8000/api/v1/
+VUE_APP_AUTH_RESOURCE=sessions
+VUE_APP_SOURCE=Dashboard
+VUE_APP_LANGUAGE=en
+
