--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue-i18n": "^8.15.1",
     "vue-noty-with-icon": "github:YangAi/vue-noty-with-icon",
     "vue-router": "^3.0.7",
+    "vue-toastification": "^0.5.1",
     "vuetify": "^2.1.0",
     "vuex": "^3.1.2",
     "xlsx": "^0.15.3"
