--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
-VUE_APP_API_URL=http://localhost:8000/api/v1/
+VUE_APP_API_URL=https://dev1.igs.indiana.edu/springs/api/v1
+
 VUE_APP_AUTH_RESOURCE=sessions
 VUE_APP_SOURCE=Dashboard
+
 VUE_APP_LANGUAGE=en
+VUE_APP_HAS_PERMISSIONS=false
