--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.4.2",
     "dayjs": "^1.8.17",
     "file-saver": "^2.0.2",
+    "libphonenumber-js": "^1.7.31",
     "localforage": "^1.7.3",
     "lodash": "^4.17.15",
     "nprogress": "^0.2.0",
