--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
-VUE_APP_API_URL=http://localhost:8000/api/v1/
+VUE_APP_API_URL=https://dev1.igs.indiana.edu/springs/api/v1
+
 VUE_APP_AUTH_RESOURCE=sessions
 VUE_APP_SOURCE=Dashboard
-VUE_APP_LANGUAGE=en
 
+VUE_APP_LANGUAGE=en
+VUE_APP_HAS_PERMISSIONS=false
+
+VUE_APP_VERIFY_CODE_LENGTH=4
