detail update form

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VUE_APP_API_URL=https://dev1.igs.indiana.edu/springs/api/v1
+VUE_APP_API_URL=http://localhost:8000/springs/api/v1
 
 VUE_APP_AUTH_RESOURCE=sessions
 VUE_APP_SOURCE=Dashboard
